# Laboratory2

./: .travis.yml  CMakeLists.txt  README.md  calc.cpp
calc/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
include/: calc.hpp
sources/: calc.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
